docker-desktop/ollama/04-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama
  labels:
    version: v1.0
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
  - port: 11434
    name: http-11434
    protocol: TCP
    targetPort: 11434
