docker-desktop/ollama/03-ingress-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ollama-gateway
  namespace: ollama
  labels:
    app.kubernetes.io/version: v1.0
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: 80-http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 11434
      name: 11434-http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: 443-https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: ollama-tls-secret
